# ask-human-now

./: .gitignore  LICENSE  README.md  mcp-server-config.json  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish-pypi.yml
src/ask_human_for_context_mcp/: __init__.py  __main__.py  broker_state.py  server.py  telegram_broker.py
src/ask_human_now/: __init__.py  __main__.py  broker_state.py  dialogs.py  prompt_formatting.py  server.py  telegram_broker.py  telegram_broker_client.py  telegram_client.py  telegram_models.py
src/ask_human_now/assets/: agent-asks.icns
tests/: __init__.py  conftest.py  test_dev_setup.py  test_dialog_timeout.py  test_dialog_timing_info.py  test_dialog_title.py  test_entry_points.py  test_icon_paths.py  test_macos_dialog.py  test_mcp_server.py  test_package.py  test_readme_features.py  test_telegram_broker.py  test_telegram_broker_client.py  test_telegram_response_channel.py  test_windows_dpi.py
