[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask-human-now"
version = "0.1.0"
description = "Ask a human for input from MCP clients using local dialogs or Telegram."
authors = [{name = "Alex Che", email = "alex.chexes@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "human-in-the-loop", "gui", "dialog", "telegram", "ai-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Desktop Environment :: File Managers"
]

dependencies = [
    "mcp",
    "starlette",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.3.5",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pyright>=1.1.405",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/alexchexes/ask-human-now"
Repository = "https://github.com/alexchexes/ask-human-now"
Issues = "https://github.com/alexchexes/ask-human-now/issues"

[project.scripts]
ask-human = "ask_human_now:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ask_human_now"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "build>=1.2",
    "pytest>=8.3.5",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pyright>=1.1.405",
    "twine>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
